# Working-Shift-Scheduling

./: queue.cpp  .gitignore  .ycm_extra_conf.py  A Calendar.csv  A Statistic.csv  B Calendar.csv  B Statistic.csv  C Calendar.csv  C Statistic.csv  CMakeLists.txt  DataStructure.hpp  Makefile  NewCalendar.txt  NewNext  Note.md  README.md  a.out  basicmenber.hpp  boss.hpp  build.py  calendar.csv  calendar.txt  calendar_date_and_day.txt  char_int_change.h  code.cpp  file_open.cpp  fileprocess.hpp  find.py  findpath.py  input  labor.cpp  labor.hpp  main  main.cpp  main2  main3  menboss.hpp  menlabor.hpp  next.csv  output  (+14 more)
Project/: Makefile
Result/: A Calendar.csv  B Calendar.csv  B Statistic.csv  C Calendar.csv  C Statistic.csv  calendar.csv
basic/: DataStructure.hpp  basic_manual.md  basicmenber.hpp  fileprocess.hpp  outputmanager.hpp
boss/: boss.hpp  menboss.hpp  menboss.hpp~21e956e
files/: 6.csv  calendar20180.csv  calendar201810.csv  calendar201812.csv  calendar20186.csv  calendar20188.csv  calendar20189.csv  calendar5.csv  calendar6.csv  calendar7.csv  holiday201810.csv  holiday201811.csv  holiday201812.csv  holiday20185.csv  holiday20186.csv  holiday20187.csv  holiday20188.csv  holiday20189.csv  holiday7.csv  rule2018.csv  schedule4.csv  schedule5.csv  schedule6.csv  schedule7.csv  shift201810.csv  shift201811.csv  shift201812.csv  shift20185.csv  shift20187.csv  shift20188.csv  shift20189.csv
group/: group.hpp  mengroup.hpp  test_group.hpp
lab/: testUniformDist.cpp
labor/: dataprocess.hpp  labor.hpp  labor_info.hpp  labor_test.hpp  menlabor.hpp
(+145 files in other folders)
